        font-weight:bold;
        margin-top:1em;
        margin-bottom:0.5em;
        text-align:center }
      div.subtitle {
        color:#C0F0C0;
        font-size:0.8em;
        margin-bottom:1em;
        text-align:center }
      div.freetext { color:#F0F0F0 }
      div.list     { color:#C0C0F0 }
    </style>
  </head>
  <body>
    $ 1.4
      % Version 21
      _ 2016-xx-xx
      * Change widget for all string to history like for call number to get last 5 value.
      * #91 Graph display scaled unit.
      * #52 New widget option for timestamp display (from 3min ago/ since 06/11/2016 20h30).
      * Close #71 display color in sensor for DT_ColorRGB and DT_ColorRGBHexa.
      * Close #112 menu button no more opening menu.
      % Version 20
      _ 2016-06-12
      * Correct bug on ICS and menu.
      * New option to choose graph height in widget options.
      * Lots of normal graph corrections.
      * Display timestamp and auto update it for sensor value.
      * New menu layout.
      * Tell user when MQ is not well configured in domogik during sync.
      * #52 Displaying sensor last value timestamp in widget.
      * Display exit program in menu Map/House.
      * Close #97 Back from camera activity to last place.
      * Close #78 allow move up or down a room or an area.
      * Close #103 Handle mq listen on localhost when syncing.
      * Close #106 solved start in map.
      % Version 18
      _ 2016-05-16
      * #106 Disable start directly to map as it crash for now.
      * Add a new logger lib (https://github.com/orhanobut/logger)
      % Version 17
      _ 2016-05-14
      ! Important due to new Theme, your map widget may have to be moved once. Also note that all potential action as not been test, particularly an old domogik 0.2 & 0.3.
      * Reorganize menu order.
      * Remove useless list in house organisation.
      * Correct camera frame rate color.
      * Add icon in longclic widget menu.